samples/_failures_safe/1761411918_8458bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97e25560.c: In function ‘main’:
./samples/SAFE/__tmp_97e25560.c:132:24: error: missing terminating " character
  132 |                 printf("Matrix dimensions must match for addition.\
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_97e25560.c:132:17: error: expected expression at end of input
  132 |                 printf("Matrix dimensions must match for addition.\
      |                 ^~~~~~
./samples/SAFE/__tmp_97e25560.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97e25560.c:132:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_97e25560.c:132:17: error: expected declaration or statement at end of input
